--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de senhas</title>
-    <link rel="stylesheet" href="style.css"
-</head>
+    <link rel="stylesheet" href="style.css" </head>
+
 <body>
     <section class="conteudo_senhas">
         <div class="conteudo_titulo">
@@ -17,6 +18,29 @@
             <label for="senha">Senha</label>
             <input name="senha" type="text" id="campo_senha">
         </div>
+        <div class="parametro">
+            <h3 class="parametro_titulo">
+                Personalise sua senha
+            </h3>
+            <div class="parametro_coluna_senha">
+                <div class="parametro_senha">
+                    <h4 class="parametro_senha_titulo">
+                        Número de caracteres
+                    </h4>
+                    <div class="parametro_senha_botoes">
+                        <button class="parametro-senha_botao">
+                            -
+                        </button>
+                        <p class="parametro-senha_texto">12</p>
+                        <button class="parametro-senha_botao">
+                            +
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 </body>
+
 </html>
