--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class="titulo_principal">gerador de senhas</h2>
             <h3 class="titulo_secundario">Gere instantaneamente uma senha</h3>
         </div>
-        <div class="conteudo_senhas">
+        <div class="conteudo_senha">
             <label for="senha">Senha</label>
             <input name="senha" type="text" id="campo_senha">
         </div>
@@ -36,6 +36,32 @@
                             +
                         </button>
                     </div>
+                </div>
+                <div class="parametro_senha">
+                    <h4 class="parametro_senha_titulo">
+                        Caracteristicas da senha
+                    </h4>
+                    <div class="parametro_senha_checkbox">
+                        <input name="maiusculo" type="checkbox" class="checkbox" checked>
+                        <label for="maiusculo">Letras maiúsculas</label>
+                    </div>
+                    <div class="parametro_senha_checkbox">
+                        <input name="minusculo" type="checkbox" class="checkbox">
+                        <label for="minusculo">Letras minúsculas</label>
+                    </div>
+                    <div class="parametro_senha_checkbox">
+                        <input name="numero" type="checkbox" class="checkbox">
+                        <label for="numero">Números</label>
+                    </div>
+                    <div class="parametro_senha_checkbox">
+                        <input name="simbolos" type="checkbox" class="checkbox">
+                        <label for="simbolos">Simbolos</label>
+                    </div>
+                </div>
+                <div class="parametro_senha">
+                    <h4 class="parametro-senha_titulo">
+                        Força senha
+                    </h4>
                 </div>
             </div>
 
