--- a/index.html
+++ b/index.html
@@ -58,14 +58,18 @@
                         <label for="simbolos">Simbolos</label>
                     </div>
                 </div>
-                <div class="parametro_senha">
-                    <h4 class="parametro-senha_titulo">
-                        Força senha
-                    </h4>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca forte"></div>
+                    <div class="parametro-senha-textos">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                    </div>
                 </div>
             </div>
-
-        </div>
+        </div 
     </section>
 </body>
 
