--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de senhas</title>
-    <link rel="stylesheet" href="style.css" </head>
+    <link rel="stylesheet" href="style.css">
 
 <body>
     <section class="conteudo_senhas">
@@ -69,8 +69,10 @@
                     </div>
                 </div>
             </div>
-        </div 
+        </div>
     </section>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
